--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,12 @@ services:
       POSTGRES_PASSWORD: 123
     ports:
       - "5432:5432"
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.org
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    ports:
+      - "5555:80"
